# langeNacht-2015

./: .gitignore  CMakeLists.mira  CMakeLists.txt  Makefile.nmake  README.md  lndw15.py  webcam.launch
MIRA/: FindMIRARoot.cmake  Makefile  make.bat
MIRA/domains/: CMakeLists.txt
MIRA/domains/gui/: CMakeLists.txt  gui.package  mountdir.xml
MIRA/domains/gui/etc/: GoalSetter.xml  guiSubscriber.xml
MIRA/domains/gui/include/: lndw_gui.hpp
MIRA/domains/gui/src/: GoalSetter.C  guiSubscriber.C  lndw_gui.cpp  main.cpp  sfmlTest.cc
MIRA/res/map/: map-nogo.xml  map-speed.xml  map-static.xml  map-static2.png.original  map.mcf
domains/gui/: CMakeLists.txt
domains/gui/doc/: MainPage.dox
